--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -342,13 +342,13 @@
 <div class="row mb-5">
     <div class="col">
         <div class="card">
-            <div class="card-header bg-secondary text-white">
+            <div class="card-header bg-primary">
                 <h4 class="mb-0"><i class="bi bi-clock-history"></i> Runs History (Last 10 Runs)</h4>
             </div>
             <div class="card-body">
                 {% if runs %}
                 <div class="table-responsive">
-                    <table id="runsHistoryTable" class="table table-striped table-hover">
+                    <table id="runsHistoryTable" class="table table-hover">
                         <thead>
                             <tr>
                                 <th>Run ID</th>
